--- a/idea-plugin/build.gradle
+++ b/idea-plugin/build.gradle
@@ -1,6 +1,13 @@
 buildscript {
 
     repositories {
+        mavenLocal()
+        maven {
+            url("https://maven.aliyun.com/repository/public/")
+        }
+        maven {
+            url("https://maven.aliyun.com/repository/spring/")
+        }
         mavenCentral()
     }
 
@@ -61,7 +68,13 @@ artifacts {
 }
 
 repositories {
-
+    mavenLocal()
+    maven {
+        setUrl("https://maven.aliyun.com/repository/public/")
+    }
+    maven {
+        setUrl("https://maven.aliyun.com/repository/spring/")
+    }
     mavenCentral()
 
 }
