--- a/idea-plugin/src/main/resources/META-INF/plugin.xml
+++ b/idea-plugin/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <idea-plugin>
-    <id>com.itangcent.idea.plugin.easy-yapi</id>
-    <name>EasyYapi</name>
-    <version>2.4.4.191.0</version>
-    <vendor email="pentatangcent@gmail.com" url="https://github.com/tangcent">Tangcent</vendor>
+    <id>com.itangcent.idea.plugin.easy-yapi-plus</id>
+    <name>EasyYapiPlus</name>
+    <version>1.0.0</version>
+    <vendor email="chenghaohao995@gmail.com" url="https://github.com/ChengHaoHappy">MaiZhu</vendor>
 
     <description><![CDATA[ Description will be added by gradle build]]></description>
 
